chore(grafana): delete infinity datasource

--- a/kubernetes/apps/monitoring/grafana/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/grafana/app/helmrelease.yaml
@@ -80,6 +80,9 @@ spec:
               sslmode: require
               maxOpenConns: 4
               maxIdleConnsAuto: true
+        deleteDatasources:
+          - name: "Infinity"
+            orgId: 1
 
     dashboardProviders:
       dashboardproviders.yaml:
