--- a/renovate.json
+++ b/renovate.json
@@ -15,18 +15,12 @@
   ],
   "dependencyDashboardTitle": "Renovate Dashboard",
   "flux": {
-    "fileMatch": [
-      "(^|/)kubernetes/.+\\.ya?ml$"
-    ]
+    "managerFilePatterns": ["/(^|/)kubernetes/.+\\.ya?ml$/"]
   },
   "helm-values": {
-    "fileMatch": [
-      "(^|/)kubernetes/.+\\.ya?ml$"
-    ]
+    "managerFilePatterns": ["/(^|/)kubernetes/.+\\.ya?ml$/"]
   },
   "kubernetes": {
-    "fileMatch": [
-      "(^|/)kubernetes/.+\\.ya?ml$"
-    ]
+    "managerFilePatterns": ["/(^|/)kubernetes/.+\\.ya?ml$/"]
   }
 }
