--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -4,6 +4,7 @@ version: "3"
 
 includes:
   bootstrap: .taskfiles/bootstrap
+  cluster: .taskfiles/cluster
   flux: .taskfiles/flux
   kubernetes: .taskfiles/kubernetes
   terraform: .taskfiles/terraform
