--- a/kubernetes/apps/kube-system/cilium/config/certificate.yaml
+++ b/kubernetes/apps/kube-system/cilium/config/certificate.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   secretName: nasenov-dev-tls
   issuerRef:
-    name: letsencrypt-production
+    name: letsencrypt-staging
     kind: ClusterIssuer
   commonName: nasenov.dev
   dnsNames:
