--- a/kubernetes/apps/monitoring/silence-operator/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/silence-operator/app/helmrelease.yaml
@@ -39,5 +39,5 @@ spec:
               value: CephNodeDiskspaceWarning
               isRegex: false
             - name: device
-              value: /dev/sda6
-              isRegex: false
+              value: /dev/sd.*
+              isRegex: true
