--- a/kubernetes/apps/default/qbittorrent/ks.yaml
+++ b/kubernetes/apps/default/qbittorrent/ks.yaml
@@ -24,6 +24,7 @@ spec:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
+  wait: true
   postBuild:
     substitute:
       APP: *app
