fix(flux): handle missing status condition

--- a/kubernetes/apps/database/crunchy-postgres-operator/ks.yaml
+++ b/kubernetes/apps/database/crunchy-postgres-operator/ks.yaml
@@ -54,8 +54,8 @@ spec:
   healthCheckExprs:
     - apiVersion: postgres-operator.crunchydata.com/v1beta1
       kind: PostgresCluster
-      current: status.conditions.filter(e, e.type == 'ProxyAvailable').all(e, e.status == 'True')
-      failed: status.conditions.filter(e, e.type == 'ProxyAvailable').all(e, e.status == 'False')
+      current: status.conditions.exists(condition, condition.type == "ProxyAvailable" && condition.status == "True")
+      failed: status.conditions.exists(condition, condition.type == "ProxyAvailable" && condition.status == "False")
 ---
 # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
 apiVersion: kustomize.toolkit.fluxcd.io/v1
