--- a/kubernetes/apps/database/emqx/ks.yaml
+++ b/kubernetes/apps/database/emqx/ks.yaml
@@ -47,8 +47,8 @@ spec:
   healthCheckExprs:
     - apiVersion: apps.emqx.io/v2beta1
       kind: EMQX
-      current: status.conditions.filter(e, e.type == 'Available').all(e, e.status == 'True')
-      failed: status.conditions.filter(e, e.type == 'Available').all(e, e.status == 'False')
+      current: status.conditions.exists(condition, condition.type == "Available" && condition.status == "True")
+      failed: status.conditions.exists(condition, condition.type == "Available" && condition.status == "False")
 ---
 # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
 apiVersion: kustomize.toolkit.fluxcd.io/v1
