--- a/kubernetes/apps/external-secrets/external-secrets/app/helmrelease.yaml
+++ b/kubernetes/apps/external-secrets/external-secrets/app/helmrelease.yaml
@@ -29,8 +29,21 @@ spec:
           drop:
             - ALL
 
+    image:
+      repository: ghcr.io/external-secrets/external-secrets
+
+    concurrent: 4
+
     serviceMonitor:
       enabled: true
 
     grafanaDashboard:
       enabled: true
+
+    webhook:
+      image:
+        repository: ghcr.io/external-secrets/external-secrets
+
+    certController:
+      image:
+        repository: ghcr.io/external-secrets/external-secrets
