--- a/kubernetes/apps/monitoring/silence-operator/ks.yaml
+++ b/kubernetes/apps/monitoring/silence-operator/ks.yaml
@@ -3,13 +3,16 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: silence-operator-crds
+  name: silence-operator
 spec:
   targetNamespace: monitoring
   interval: 30m
   retryInterval: 2m
   timeout: 5m
-  path: ./kubernetes/apps/monitoring/silence-operator/crds
+  dependsOn:
+    - name: kube-prometheus-stack
+      namespace: monitoring
+  path: ./kubernetes/apps/monitoring/silence-operator/app
   prune: true
   sourceRef:
     kind: GitRepository
@@ -21,18 +24,16 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: silence-operator
+  name: silence-operator-silences
 spec:
   targetNamespace: monitoring
   interval: 30m
   retryInterval: 2m
   timeout: 5m
   dependsOn:
-    - name: silence-operator-crds
+    - name: silence-operator
       namespace: monitoring
-    - name: kube-prometheus-stack
-      namespace: monitoring
-  path: ./kubernetes/apps/monitoring/silence-operator/app
+  path: ./kubernetes/apps/monitoring/silence-operator/silences
   prune: true
   sourceRef:
     kind: GitRepository
