chore(silence-operator): depends on prometheus-operator-crds

--- a/kubernetes/apps/monitoring/silence-operator/ks.yaml
+++ b/kubernetes/apps/monitoring/silence-operator/ks.yaml
@@ -12,6 +12,8 @@ spec:
   dependsOn:
     - name: kube-prometheus-stack
       namespace: monitoring
+    - name: prometheus-operator-crds
+      namespace: monitoring
   path: ./kubernetes/apps/monitoring/silence-operator/app
   prune: true
   sourceRef:
