--- a/kubernetes/apps/default/it-tools/app/helmrelease.yaml
+++ b/kubernetes/apps/default/it-tools/app/helmrelease.yaml
@@ -64,5 +64,10 @@ spec:
                 port: *port
 
     persistence:
-      tmp:
+      tmpfs:
         type: emptyDir
+        advancedMounts:
+          it-tools:
+            app:
+              - path: /tmp
+                subPath: tmp
