--- a/kubernetes/apps/default/sonarr/app/helmrelease.yaml
+++ b/kubernetes/apps/default/sonarr/app/helmrelease.yaml
@@ -88,3 +88,10 @@ spec:
         path: /mnt/tank/media
         globalMounts:
           - path: /data
+      tmpfs:
+        type: emptyDir
+        advancedMounts:
+          sonarr:
+            app:
+              - path: /tmp
+                subPath: tmp
