--- a/kubernetes/apps/default/cross-seed/app/helmrelease.yaml
+++ b/kubernetes/apps/default/cross-seed/app/helmrelease.yaml
@@ -71,14 +71,6 @@ spec:
     persistence:
       config:
         existingClaim: cross-seed
-      config-cross-seeds:
-        type: emptyDir
-        globalMounts:
-          - path: /config/cross-seeds
-      config-logs:
-        type: emptyDir
-        globalMounts:
-          - path: /config/logs
       secret-file:
         type: secret
         name: cross-seed
@@ -94,3 +86,10 @@ spec:
         globalMounts:
           - path: /data/downloads
             subPath: downloads
+      tmpfs:
+        type: emptyDir
+        advancedMounts:
+          cross-seed:
+            app:
+              - path: /config/logs
+                subPath: logs
