--- a/kubernetes/apps/default/recyclarr/app/helmrelease.yaml
+++ b/kubernetes/apps/default/recyclarr/app/helmrelease.yaml
@@ -62,7 +62,7 @@ spec:
         existingClaim: recyclarr
       config-file:
         type: configMap
-        name: recyclarr-configmap
+        name: recyclarr
         globalMounts:
           - path: /config/recyclarr.yml
             subPath: recyclarr.yml
