--- a/kubernetes/apps/default/glance/app/helmrelease.yaml
+++ b/kubernetes/apps/default/glance/app/helmrelease.yaml
@@ -70,7 +70,7 @@ spec:
     persistence:
       config:
         type: configMap
-        name: glance-config
+        name: glance
         globalMounts:
           - path: /app/config/glance.yml
             subPath: glance.yml
