--- a/kubernetes/apps/default/jellyfin/app/helmrelease.yaml
+++ b/kubernetes/apps/default/jellyfin/app/helmrelease.yaml
@@ -71,6 +71,7 @@ spec:
     route:
       app:
         hostnames:
+          - jellyfin.nasenov.dev
           - media.nasenov.dev
         parentRefs:
           - name: internal
