chore(glance): automation apps widgets

--- a/kubernetes/apps/default/zigbee2mqtt/app/helmrelease.yaml
+++ b/kubernetes/apps/default/zigbee2mqtt/app/helmrelease.yaml
@@ -71,6 +71,7 @@ spec:
     route:
       app:
         hostnames:
+          - zigbee2mqtt.nasenov.dev
           - zigbee.nasenov.dev
         parentRefs:
           - name: internal
