--- a/kubernetes/apps/default/glance/app/resources/glance.yml
+++ b/kubernetes/apps/default/glance/app/resources/glance.yml
@@ -55,6 +55,22 @@ pages:
               - title: Minio
                 url: https://minio.nasenov.dev:9002
                 icon: di:minio.svg
+              # Automation
+              - title: Home-assistant
+                url: https://home-assistant.nasenov.dev
+                icon: di:home-assistant.svg
+              - title: Zigbee2mqtt
+                url: https://zigbee2mqtt.nasenov.dev
+                icon: di:zigbee2mqtt.svg
+              - title: EMQX
+                url: https://emqx.nasenov.dev
+                icon: di:emqx.svg
+              - title: n8n
+                url: https://n8n.nasenov.dev
+                icon: di:n8n.svg
+              - title: IT-tools
+                url: https://it-tools.nasenov.dev
+                icon: di:it-tools.svg
 
           - type: bookmarks
             groups:
