--- a/kubernetes/apps/default/home-assistant/app/helmrelease.yaml
+++ b/kubernetes/apps/default/home-assistant/app/helmrelease.yaml
@@ -48,6 +48,7 @@ spec:
     route:
       app:
         hostnames:
+          - home-assistant.nasenov.dev
           - hass.nasenov.dev
         parentRefs:
           - name: internal
