--- a/kubernetes/apps/default/glance/app/resources/glance.yml
+++ b/kubernetes/apps/default/glance/app/resources/glance.yml
@@ -3,21 +3,14 @@ server:
   proxied: true
 
 pages:
-  - name: Startpage
-    width: slim
-    hide-desktop-navigation: true
-    center-vertically: true
+  - name: Homelab
     columns:
       - size: full
         widgets:
-          - type: search
-            autofocus: true
-
           - type: monitor
-            title: Services
+            title: Media
             cache: 1m
             sites:
-              # Media
               - title: Jellyfin
                 url: https://jellyfin.nasenov.dev
                 icon: di:jellyfin.svg
@@ -42,7 +35,11 @@ pages:
               - title: Autobrr
                 url: https://autobrr.nasenov.dev
                 icon: di:autobrr.svg
-              # Infrastructure
+
+          - type: monitor
+            title: Infrastructure
+            cache: 1m
+            sites:
               - title: Proxmox
                 url: https://pve.nasenov.dev:8006
                 icon: di:proxmox.svg
@@ -55,7 +52,11 @@ pages:
               - title: Minio
                 url: https://minio.nasenov.dev:9002
                 icon: di:minio.svg
-              # Monitoring
+
+          - type: monitor
+            title: Monitoring
+            cache: 1m
+            sites:
               - title: Grafana
                 url: https://grafana.nasenov.dev
                 icon: di:grafana.svg
@@ -71,7 +72,11 @@ pages:
               - title: Alloy
                 url: https://alloy.nasenov.dev
                 icon: di:alloy.svg
-              # Automation
+
+          - type: monitor
+            title: Automation
+            cache: 1m
+            sites:
               - title: Home-assistant
                 url: https://home-assistant.nasenov.dev
                 icon: di:home-assistant.svg
@@ -87,157 +92,3 @@ pages:
               - title: IT-tools
                 url: https://it-tools.nasenov.dev
                 icon: di:it-tools.svg
-
-          - type: bookmarks
-            groups:
-              - title: General
-                links:
-                  - title: Gmail
-                    url: https://mail.google.com/mail/u/0/
-                  - title: Amazon
-                    url: https://www.amazon.com/
-                  - title: Github
-                    url: https://github.com/
-              - title: Entertainment
-                links:
-                  - title: YouTube
-                    url: https://www.youtube.com/
-                  - title: Prime Video
-                    url: https://www.primevideo.com/
-                  - title: Disney+
-                    url: https://www.disneyplus.com/
-              - title: Social
-                links:
-                  - title: Reddit
-                    url: https://www.reddit.com/
-                  - title: Twitter
-                    url: https://twitter.com/
-                  - title: Instagram
-                    url: https://www.instagram.com/
-
-  - name: Markets
-    columns:
-      - size: small
-        widgets:
-          - type: markets
-            title: Indices
-            markets:
-              - symbol: SPY
-                name: S&P 500
-              - symbol: DX-Y.NYB
-                name: Dollar Index
-
-          - type: markets
-            title: Crypto
-            markets:
-              - symbol: BTC-USD
-                name: Bitcoin
-              - symbol: ETH-USD
-                name: Ethereum
-
-          - type: markets
-            title: Stocks
-            sort-by: absolute-change
-            markets:
-              - symbol: NVDA
-                name: NVIDIA
-              - symbol: AAPL
-                name: Apple
-              - symbol: MSFT
-                name: Microsoft
-              - symbol: GOOGL
-                name: Google
-              - symbol: AMD
-                name: AMD
-              - symbol: RDDT
-                name: Reddit
-              - symbol: AMZN
-                name: Amazon
-              - symbol: TSLA
-                name: Tesla
-              - symbol: INTC
-                name: Intel
-              - symbol: META
-                name: Meta
-
-      - size: full
-        widgets:
-          - type: rss
-            title: News
-            style: horizontal-cards
-            feeds:
-              - url: https://feeds.bloomberg.com/markets/news.rss
-                title: Bloomberg
-              - url: https://moxie.foxbusiness.com/google-publisher/markets.xml
-                title: Fox Business
-              - url: https://moxie.foxbusiness.com/google-publisher/technology.xml
-                title: Fox Business
-
-          - type: group
-            widgets:
-              - type: reddit
-                show-thumbnails: true
-                subreddit: technology
-              - type: reddit
-                show-thumbnails: true
-                subreddit: wallstreetbets
-
-          - type: videos
-            style: grid-cards
-            collapse-after-rows: 3
-            channels:
-              - UCvSXMi2LebwJEM1s4bz5IBA # New Money
-              - UCV6KDgJskWaEckne5aPA0aQ # Graham Stephan
-              - UCAzhpt9DmG6PnHXjmJTvRGQ # Federal Reserve
-
-      - size: small
-        widgets:
-          - type: rss
-            title: News
-            limit: 30
-            collapse-after: 13
-            feeds:
-              - url: https://www.ft.com/technology?format=rss
-                title: Financial Times
-              - url: https://feeds.a.dj.com/rss/RSSMarketsMain.xml
-                title: Wall Street Journal
-
-  - name: Gaming
-    columns:
-      - size: small
-        widgets:
-          - type: twitch-top-games
-            limit: 20
-            collapse-after: 13
-            exclude:
-              - just-chatting
-              - pools-hot-tubs-and-beaches
-              - music
-              - art
-              - asmr
-
-      - size: full
-        widgets:
-          - type: group
-            widgets:
-              - type: reddit
-                show-thumbnails: true
-                subreddit: pcgaming
-              - type: reddit
-                subreddit: games
-
-          - type: videos
-            style: grid-cards
-            collapse-after-rows: 3
-            channels:
-              - UCNvzD7Z-g64bPXxGzaQaa4g # gameranx
-              - UCZ7AeeVbyslLM_8-nVy2B8Q # Skill Up
-              - UCHDxYLv8iovIbhrfl16CNyg # GameLinked
-              - UC9PBzalIcEQCsiIkq36PyUA # Digital Foundry
-
-      - size: small
-        widgets:
-          - type: reddit
-            subreddit: gamingnews
-            limit: 7
-            style: vertical-cards
