--- a/kubernetes/apps/monitoring/gatus/app/resources/config.yaml
+++ b/kubernetes/apps/monitoring/gatus/app/resources/config.yaml
@@ -14,3 +14,13 @@ connectivity:
   checker:
     target: 1.1.1.1:53
     interval: 1m
+endpoints:
+  - name: emqx
+    group: infrastructure
+    url: tcp://emqx-listeners.database.svc.cluster.local:1883
+    interval: 1m
+    ui:
+      hide-url: true
+      hide-hostname: true
+    conditions:
+      - "[CONNECTED] == true"
