--- a/kubernetes/apps/default/n8n/ks.yaml
+++ b/kubernetes/apps/default/n8n/ks.yaml
@@ -11,6 +11,7 @@ spec:
   timeout: 5m
   components:
     - ../../../../components/volsync
+    - ../../../../components/gatus/guarded
   dependsOn:
     - name: volsync
       namespace: storage
