--- a/kubernetes/apps/monitoring/alloy/ks.yaml
+++ b/kubernetes/apps/monitoring/alloy/ks.yaml
@@ -3,12 +3,14 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: alloy
+  name: &app alloy
 spec:
   targetNamespace: monitoring
   interval: 30m
   retryInterval: 2m
   timeout: 5m
+  components:
+    - ../../../../components/gatus/guarded
   dependsOn:
     - name: prometheus-operator-crds
       namespace: monitoring
@@ -18,3 +20,6 @@ spec:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
+  postBuild:
+    substitute:
+      APP: *app
