--- a/kubernetes/apps/monitoring/kromgo/ks.yaml
+++ b/kubernetes/apps/monitoring/kromgo/ks.yaml
@@ -3,15 +3,21 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: kromgo
+  name: &app kromgo
 spec:
   targetNamespace: monitoring
   interval: 30m
   retryInterval: 2m
   timeout: 5m
+  components:
+    - ../../../../components/gatus/external
   path: ./kubernetes/apps/monitoring/kromgo/app
   prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
+  postBuild:
+    substitute:
+      APP: *app
+      GATUS_PATH: /talos_version
