fix(n8n): use env vars for postgres credentials

--- a/kubernetes/apps/default/n8n/app/externalsecret.yaml
+++ b/kubernetes/apps/default/n8n/app/externalsecret.yaml
@@ -18,3 +18,31 @@ spec:
     - secretKey: N8N_ENCRYPTION_KEY
       remoteRef:
         key: N8N_ENCRYPTION_KEY
+---
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/external-secrets.io/externalsecret_v1.json
+apiVersion: external-secrets.io/v1
+kind: ExternalSecret
+metadata:
+  name: n8n-xiaomi-body-compositon-workflow
+spec:
+  secretStoreRef:
+    kind: ClusterSecretStore
+    name: postgres-secrets-store
+  target:
+    name: n8n-xiaomi-body-compositon-workflow
+    template:
+      engineVersion: v2
+      data:
+        XIAOMI_BODY_COMPOSITON_POSTGRES_HOST: "{{ .pgbouncer_host }}"
+        XIAOMI_BODY_COMPOSITON_POSTGRES_PORT: "{{ .pgbouncer_port }}"
+        XIAOMI_BODY_COMPOSITON_POSTGRES_DATABASE: "{{ .dbname }}"
+        XIAOMI_BODY_COMPOSITON_POSTGRES_USER: "{{ .user }}"
+        XIAOMI_BODY_COMPOSITON_POSTGRES_PASSWORD: "{{ .password }}"
+        XIAOMI_BODY_COMPOSITON_POSTGRES_MAX_OPEN_CONN: "4"
+  dataFrom:
+    - extract:
+        key: postgres-pguser-fitness
+      rewrite:
+        - regexp:
+            source: "-"
+            target: "_"
