--- a/kubernetes/apps/default/n8n/app/helmrelease.yaml
+++ b/kubernetes/apps/default/n8n/app/helmrelease.yaml
@@ -44,6 +44,8 @@ spec:
             envFrom:
               - secretRef:
                   name: n8n
+              - secretRef:
+                  name: n8n-xiaomi-body-compositon-workflow
             probes:
               liveness:
                 enabled: true
