fix(n8n): use env vars for postgres credentials

--- a/kubernetes/apps/default/n8n/app/externalsecret.yaml
+++ b/kubernetes/apps/default/n8n/app/externalsecret.yaml
@@ -38,6 +38,7 @@ spec:
         XIAOMI_BODY_COMPOSITON_POSTGRES_DATABASE: "{{ .dbname }}"
         XIAOMI_BODY_COMPOSITON_POSTGRES_USER: "{{ .user }}"
         XIAOMI_BODY_COMPOSITON_POSTGRES_PASSWORD: "{{ .password }}"
+        XIAOMI_BODY_COMPOSITON_POSTGRES_IGNORE_SSL: "true"
         XIAOMI_BODY_COMPOSITON_POSTGRES_MAX_OPEN_CONN: "4"
   dataFrom:
     - extract:
