chore(external-secrets): use default value for secret name

--- a/kubernetes/apps/monitoring/kube-prometheus-stack/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/kube-prometheus-stack/app/helmrelease.yaml
@@ -83,7 +83,7 @@ spec:
 
       alertmanagerSpec:
         useExistingSecret: true
-        configSecret: alertmanager-configuration
+        configSecret: alertmanager
         storage:
           volumeClaimTemplate:
             spec:
