--- a/kubernetes/apps/database/crunchy-postgres-operator/cluster/postgrescluster.yaml
+++ b/kubernetes/apps/database/crunchy-postgres-operator/cluster/postgrescluster.yaml
@@ -38,7 +38,7 @@ spec:
     pgbackrest:
       configuration: &backupConfig
         - secret:
-            name: crunchy-postgres-secret
+            name: crunchy-postgres
       global: &backupGlobal
         compress-type: "bz2"
         compress-level: "9"
