--- a/kubernetes/apps/networking/cloudflare-tunnel/app/helmrelease.yaml
+++ b/kubernetes/apps/networking/cloudflare-tunnel/app/helmrelease.yaml
@@ -38,7 +38,7 @@ spec:
               TUNNEL_METRICS: 0.0.0.0:8080
             envFrom:
               - secretRef:
-                  name: cloudflare-tunnel-secret
+                  name: cloudflare-tunnel
             probes:
               liveness: &probes
                 enabled: true
