fix(external-secrets): bitwarden API rate limit

--- a/kubernetes/apps/default/cross-seed/app/externalsecret.yaml
+++ b/kubernetes/apps/default/cross-seed/app/externalsecret.yaml
@@ -53,19 +53,19 @@ spec:
   data:
     - secretKey: CROSS_SEED_API_KEY
       remoteRef:
-        key: CROSS_SEED_API_KEY
+        key: d109c0f8-0828-4d3e-bf53-b2860102377b
     - secretKey: RADARR_KEY
       remoteRef:
-        key: RADARR_KEY
+        key: d0491587-c8dc-4e81-a1f7-b27f01353cf5
     - secretKey: SONARR_KEY
       remoteRef:
-        key: SONARR_KEY
+        key: 2018ba36-f54b-4269-aa43-b27f01357eaa
     - secretKey: PROWLARR_KEY
       remoteRef:
-        key: PROWLARR_KEY
+        key: e6889f99-9261-41ae-b631-b27f01362650
     - secretKey: QBITTORRENT_USERNAME
       remoteRef:
-        key: QBITTORRENT_USERNAME
+        key: 57d6460b-b7cc-4269-9f45-b27f0136e722
     - secretKey: QBITTORRENT_PASSWORD
       remoteRef:
-        key: QBITTORRENT_PASSWORD
+        key: cc69e0c0-3341-45f2-b0ae-b27f0136f9ea
