--- a/kubernetes/apps/default/n8n/app/externalsecret.yaml
+++ b/kubernetes/apps/default/n8n/app/externalsecret.yaml
@@ -16,7 +16,7 @@ spec:
   data:
     - secretKey: N8N_ENCRYPTION_KEY
       remoteRef:
-        key: N8N_ENCRYPTION_KEY
+        key: 5fb3327d-52ba-4e67-bf89-b2d800539cc7
 ---
 # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/external-secrets.io/externalsecret_v1.json
 apiVersion: external-secrets.io/v1
