--- a/kubernetes/apps/default/qbtools/app/externalsecret.yaml
+++ b/kubernetes/apps/default/qbtools/app/externalsecret.yaml
@@ -16,7 +16,7 @@ spec:
   data:
     - secretKey: QBITTORRENT_USERNAME
       remoteRef:
-        key: QBITTORRENT_USERNAME
+        key: 57d6460b-b7cc-4269-9f45-b27f0136e722
     - secretKey: QBITTORRENT_PASSWORD
       remoteRef:
-        key: QBITTORRENT_PASSWORD
+        key: cc69e0c0-3341-45f2-b0ae-b27f0136f9ea
