--- a/kubernetes/apps/default/recyclarr/app/externalsecret.yaml
+++ b/kubernetes/apps/default/recyclarr/app/externalsecret.yaml
@@ -16,7 +16,7 @@ spec:
   data:
     - secretKey: SONARR_KEY
       remoteRef:
-        key: SONARR_KEY
+        key: 2018ba36-f54b-4269-aa43-b27f01357eaa
     - secretKey: RADARR_KEY
       remoteRef:
-        key: RADARR_KEY
+        key: d0491587-c8dc-4e81-a1f7-b27f01353cf5
