--- a/kubernetes/apps/monitoring/grafana/app/externalsecret.yaml
+++ b/kubernetes/apps/monitoring/grafana/app/externalsecret.yaml
@@ -17,10 +17,10 @@ spec:
   data:
     - secretKey: GRAFANA_ADMIN_USER
       remoteRef:
-        key: GRAFANA_ADMIN_USER
+        key: 6f95d400-316b-4aa7-9f70-b27a0150096f
     - secretKey: GRAFANA_ADMIN_PASSWORD
       remoteRef:
-        key: GRAFANA_ADMIN_PASSWORD
+        key: 6b302209-5ea1-4436-9336-b27a01503899
 ---
 # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/external-secrets.io/externalsecret_v1.json
 apiVersion: external-secrets.io/v1
