--- a/kubernetes/apps/rook-ceph/rook-ceph/app/externalsecret.yaml
+++ b/kubernetes/apps/rook-ceph/rook-ceph/app/externalsecret.yaml
@@ -15,4 +15,4 @@ spec:
   data:
     - secretKey: ROOK_DASHBOARD_PASSWORD
       remoteRef:
-        key: ROOK_DASHBOARD_PASSWORD
+        key: f98a311e-757e-454d-b7ae-b2cb00ac9bf8
