--- a/kubernetes/apps/database/crunchy-postgres-operator/app/externalsecret.yaml
+++ b/kubernetes/apps/database/crunchy-postgres-operator/app/externalsecret.yaml
@@ -16,4 +16,4 @@ spec:
   data:
     - secretKey: POSTGRESQL_R2_ENDPOINT
       remoteRef:
-        key: POSTGRESQL_R2_ENDPOINT
+        key: bb77bd30-ee43-46ae-8f1f-b2b400f58c21
