--- a/kubernetes/apps/external-secrets/external-secrets/app/helmrelease.yaml
+++ b/kubernetes/apps/external-secrets/external-secrets/app/helmrelease.yaml
@@ -32,6 +32,9 @@ spec:
     image:
       repository: ghcr.io/external-secrets/external-secrets
 
+    log:
+      level: debug
+
     serviceMonitor:
       enabled: true
 
