chore(kubelet-csr-approver): remove kubelet-csr-approver

--- a/kubernetes/apps/kube-system/metrics-server/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/metrics-server/app/helmrelease.yaml
@@ -20,6 +20,8 @@ spec:
     remediation:
       retries: 3
   values:
+    args:
+      - --kubelet-insecure-tls
     metrics:
       enabled: true
     serviceMonitor:
