feat(postgres): prepopulate postgres user password

--- a/kubernetes/apps/database/crunchy-postgres-operator/app/externalsecret.yaml
+++ b/kubernetes/apps/database/crunchy-postgres-operator/app/externalsecret.yaml
@@ -17,3 +17,22 @@ spec:
     - secretKey: POSTGRESQL_R2_ENDPOINT
       remoteRef:
         key: bb77bd30-ee43-46ae-8f1f-b2b400f58c21
+---
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/external-secrets.io/externalsecret_v1.json
+apiVersion: external-secrets.io/v1
+kind: ExternalSecret
+metadata:
+  name: postgres-pguser-postgres
+  labels:
+    postgres-operator.crunchydata.com/cluster: postgres
+    postgres-operator.crunchydata.com/pguser: postgres
+spec:
+  secretStoreRef:
+    kind: ClusterSecretStore
+    name: bitwarden-secrets-manager
+  target:
+    creationPolicy: Orphan
+  data:
+    - secretKey: password
+      remoteRef:
+        key: eb8becdd-5d69-4e46-b051-b2eb013acfc7
