chore(alertmanager): use alertmanagerconfig crd

--- a/kubernetes/apps/monitoring/kube-prometheus-stack/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/kube-prometheus-stack/app/helmrelease.yaml
@@ -82,8 +82,11 @@ spec:
               sectionName: https
 
       alertmanagerSpec:
-        useExistingSecret: true
-        configSecret: alertmanager
+        alertmanagerConfiguration:
+          name: alertmanager
+          global:
+            resolveTimeout: 5m
+        externalUrl: https://alertmanager.nasenov.dev
         storage:
           volumeClaimTemplate:
             spec:
