--- a/kubernetes/apps/monitoring/kube-prometheus-stack/app/externalsecret.yaml
+++ b/kubernetes/apps/monitoring/kube-prometheus-stack/app/externalsecret.yaml
@@ -12,61 +12,7 @@ spec:
     template:
       engineVersion: v2
       data:
-        alertmanager.yaml: |
-          global:
-            resolve_timeout: 5m
-            http_config:
-              follow_redirects: true
-              enable_http2: true
-            smtp_hello: localhost
-            smtp_require_tls: true
-            pagerduty_url: https://events.pagerduty.com/v2/enqueue
-            opsgenie_api_url: https://api.opsgenie.com/
-            wechat_api_url: https://qyapi.weixin.qq.com/cgi-bin/
-            victorops_api_url: https://alert.victorops.com/integrations/generic/20131114/alert/
-            telegram_api_url: https://api.telegram.org
-            webex_api_url: https://webexapis.com/v1/messages
-          route:
-            receiver: discord
-            group_by:
-              - namespace
-            continue: false
-            routes:
-              - receiver: "null"
-                matchers:
-                  - alertname=~"InfoInhibitor|Watchdog"
-                continue: false
-            group_wait: 30s
-            group_interval: 5m
-            repeat_interval: 12h
-          inhibit_rules:
-            - source_matchers:
-                - severity="critical"
-              target_matchers:
-                - severity=~"warning|info"
-              equal:
-                - namespace
-                - alertname
-            - source_matchers:
-                - severity="warning"
-              target_matchers:
-                - severity="info"
-              equal:
-                - namespace
-                - alertname
-            - source_matchers:
-                - alertname="InfoInhibitor"
-              target_matchers:
-                - severity="info"
-              equal:
-                - namespace
-          receivers:
-            - name: "null"
-            - name: discord
-              discord_configs:
-                - webhook_url: {{ .ALERTMANAGER_DISCORD_WEBHOOK_URL }}
-          templates:
-            - /etc/alertmanager/config/*.tmpl
+        ALERTMANAGER_DISCORD_WEBHOOK_URL: "{{ .ALERTMANAGER_DISCORD_WEBHOOK_URL }}"
   data:
     - secretKey: ALERTMANAGER_DISCORD_WEBHOOK_URL
       remoteRef:
