--- a/kubernetes/apps/monitoring/kube-prometheus-stack/app/alertmanagerconfig.yaml
+++ b/kubernetes/apps/monitoring/kube-prometheus-stack/app/alertmanagerconfig.yaml
@@ -17,11 +17,8 @@ spec:
       - receiver: "null"
         matchers:
           - name: alertname
-            value: InfoInhibitor
-            matchType: =
-          - name: alertname
-            value: Watchdog
-            matchType: =
+            value: InfoInhibitor|Watchdog
+            matchType: =~
       - receiver: discord
         matchers:
           - name: severity
